--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,12 @@ dependencies:
   intersperse: ^2.0.0
   url_launcher: ^6.2.1
   flutter_svg: ^2.0.9
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.5
 
