--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,10 @@ flutter_native_splash:
     image: "assets/launcher_icon/splash.png"
 
 flutter_launcher_icons:
-  image_path: "assets/launcher_icon/icon.png"
-  android: true
+  # image_path: "assets/launcher_icon/icon-android.png"
+  image_path_android: "assets/launcher_icon/icon-android.png"
+  image_path_ios: "assets/launcher_icon/icon.png"
+  android: false
   ios: true
   remove_alpha_ios: true
 
