--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,8 @@ flutter_launcher_icons:
   # image_path: "assets/launcher_icon/icon-android.png"
   image_path_android: "assets/launcher_icon/icon-android.png"
   image_path_ios: "assets/launcher_icon/icon.png"
-  android: false
-  ios: true
+  android: true
+  ios: false
   remove_alpha_ios: true
 
 flutter:
