--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>174751530690-72q5evaq6lpca53sjtqonsrq7cn6u105.apps.googleusercontent.com</string>
+	<string>174751530690-e2i4s9bkolef047jr3tidjr62b3cnre7.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.174751530690-72q5evaq6lpca53sjtqonsrq7cn6u105</string>
+	<string>com.googleusercontent.apps.174751530690-e2i4s9bkolef047jr3tidjr62b3cnre7</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>174751530690-hat1ntnu59vcqr33rhv3m1bs30avkh5i.apps.googleusercontent.com</string>
+	<string>174751530690-9iugc9rg57j8umilp5qtqssfh1amls6n.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC9UTGhG0kIyEI_UxD-kYACGRYRtFq0LDM</string>
 	<key>GCM_SENDER_ID</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>br.com.movecare.movecare</string>
+	<string>br.com.moveecare.moveecare</string>
 	<key>PROJECT_ID</key>
 	<string>move-e-care</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:174751530690:ios:bb9fb2a99620f3ade0055b</string>
+	<string>1:174751530690:ios:d334b2f8bb149677e0055b</string>
 </dict>
 </plist>
