--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,14 @@
 name: moveecare
 description: A new Flutter project.
 
-version: 1.1.1+2
+version: 1.2.4+4
 
 environment:
-  sdk: ">=3.2.0 <4.0.0"
+  sdk: ">=3.3.1 <4.0.0"
 
 dependencies:
+  flutter_localizations:
+    sdk: flutter
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
@@ -14,18 +16,18 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_modular: ^6.3.2
   intersperse: ^2.0.0
-  url_launcher: ^6.2.1
+  url_launcher: ^6.3.1
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
   pinput: ^3.0.1
-  firebase_core: ^2.31.0
-  firebase_auth: ^4.19.5
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.0.0
   flutter_html: ^3.0.0-beta.2
-  cloud_firestore: ^4.13.3
+  cloud_firestore: ^5.4.0
   dartz: ^0.10.1
   loader_overlay: ^3.0.4
   google_sign_in: ^6.2.1
-  firebase_remote_config: ^4.4.6
+  firebase_remote_config: ^5.1.3
   mailto: ^2.0.0
   open_store: ^0.5.0
 
